# CpuSchedulerTweaksSourceCode

./: .gitmodules  Cargo.toml  Cargo.toml.bak  README.md  bot.py  build.rs  config.toml  customize.sh  life-death-scheduler  module.prop  service.sh
.github/: bot.py
.github/workflows/: build.yml  ci.yml  rust.yml
module/: README.md  config.toml  customize.sh  life-death-scheduler  module.prop  service.sh
patches/: config.patch
python/: md2.py
src/: defs.rs  main.rs
src/framework/: mod.rs
src/framework/config/: data.rs  data.rs.bak  mod.rs  mod.rs.bak
src/framework/scheduler/: mod.rs
src/framework/scheduler/cpu/: freq.rs  governor.rs  mod.rs  mod.rs.bak
src/framework/scheduler/cpuctl/: mod.rs  mod.rs.bak
src/framework/scheduler/dump/: mod.rs  power.rs  topapps.rs  topapps.rs.bak
src/utils/: cpu.rs  files.rs  mod.rs  processes.rs
